<resources>
    <string name="app_name">trivia-app</string>
    <string name="start_game">Start Game</string>
    <string name="stats">Stats</string>
    <string name="triviafun">TriviaFUN</string>
    <string name="settings_credits">Settings / Credits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="main_menu">Main Menu</string>
    <string name="score">Score: %d</string>
    <string name="x">X</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="fx">FX</string>
    <string name="on">ON</string>
    <string name="credits">Credits</string>
    <string name="open_trivia_database">• Open Trivia Database\n\t\t• No changes were made.</string>
    <string name="link_to_api"><u>Link to the API here</u></string>
    <string name="link_to_license"><u>Link to the license here</u></string>
    <string name="dreamstime_sound_effects">• Sound effects taken royalty-free \n\t\tfrom Dreamstime</string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="triviafun2">TRIVIAFUN</string>
</resources>