<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/triviafun"
        android:textColor="#858585"
        android:textSize="50sp"
        android:radius="20dp"
        android:textStyle="bold"
    />

    <Button
        android:id="@+id/btnStart"
        style="@style/activity_main_button"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#595CAE"
        android:text="@string/start_game"
    />

    <Button
        android:id="@+id/btnStats"
        style="@style/activity_main_button"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#AE5959"
        android:text="@string/stats"
    />

    <Button
        android:id="@+id/btnSettings"
        style="@style/activity_main_button"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#E89C56"
        android:text="@string/settings_credits"
    />

</LinearLayout>